--- a/app/src/main/res/layout/activity_confirm_enrolment.xml
+++ b/app/src/main/res/layout/activity_confirm_enrolment.xml
@@ -6,4 +6,54 @@
     android:layout_height="match_parent"
     tools:context=".ConfirmEnrolmentActivity">
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/Black"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:text="Enrolment Confirmation"
+            android:textAlignment="center"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:textColor="@color/White"
+            app:fontFamily="@font/montserrat" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="Pay N... from my EWallet to Enrol. Please confirm by clicking the Pay button below"
+            android:textAlignment="center"
+            android:textSize="16dp"
+            android:textColor="@color/White"
+            app:fontFamily="@font/montserrat" />
+
+        <Button
+            android:id="@+id/buttonConfirmEnrolmentPay"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/red_button"
+            android:text="Pay"
+            android:textColor="@color/White"
+            app:fontFamily="@font/montserrat"/>
+
+
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
