--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -44,7 +44,7 @@ tools:layout_editor_absoluteX="8dp">
             android:orientation="vertical"
             android:paddingTop="10dp"
             android:paddingBottom="20dp"
-            android:background="@color/DarkBlue"
+            android:background="#006400"
             android:layout_centerHorizontal="true">
 
             <ImageView
@@ -201,7 +201,7 @@ tools:layout_editor_absoluteX="8dp">
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/red_button"
+                android:background="@drawable/green_button"
                 android:text="Sign In"
                 android:textColor="@color/White"
                 app:fontFamily="@font/montserrat"/>
@@ -217,7 +217,7 @@ tools:layout_editor_absoluteX="8dp">
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/dark_blue_button"
+                android:background="@drawable/dark_green_button"
                 android:text="Back to Home"
                 android:textColor="@color/White"
                 app:fontFamily="@font/montserrat"/>
